manifests/configs/filebrowser/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  labels:
    app.kubernetes.io/instance: filebrowser
  name: filebrowser-anonymous
  namespace: filebrowser
spec:
  ingressClassName: nginx
  rules:
    - host: share.janz.digital
      http:
        paths:
          - backend:
              service:
                name: filebrowser
                port:
                  number: 80
            path: /api/login
            pathType: Prefix
          - backend:
              service:
                name: filebrowser
                port:
                  number: 80
            path: /api/public
            pathType: Prefix
          - backend:
              service:
                name: filebrowser
                port:
                  number: 80
            path: /static
            pathType: Prefix
          - backend:
              service:
                name: filebrowser
                port:
                  number: 80
            path: /share
            pathType: Prefix
  tls:
    - hosts:
        - share.apps.hive.janz.digital
        - share.janz.digital
